# BRB_app

./: .gitignore  README.MD  flask_config.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: __init__.py  helpers.py  views.py
app/static/: index.js
app/static/css/: output.css
app/static/js/: index.js  timer.js
app/templates/: base.html  home.html
tests/: test_views.py
