[tool.poetry]
name = "brb-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Beerware"
readme = "README.md"
packages = [{include = "brb_app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
